Removed most static analysis warnings.